# QtNotes

./: .gitignore  CMakeLists.txt  CMakePresets.json  Hello.sdf  Hello.sln  README.md  TRANSLATION_GUIDE.md  build.bat  clean_project.bat  generate_translations.bat
Hello/: ApiResponse.h  BleManager.cpp  BleManager.h  BluetoothWindow.cpp  BluetoothWindow.h  BrowserWindow.cpp  BrowserWindow.h  CoreBridge.cpp  CoreBridge.h  FaceDemoWindow.cpp  FaceDemoWindow.h  FaceTestWindow.cpp  FaceTestWindow.h  Hello.cpp  Hello.h  Hello.qrc  Hello.ui  Hello.vcxproj  Hello.vcxproj.filters  ImageCarousel.cpp  ImageCarousel.h  JellyButton.cpp  JellyButton.h  MarqueeLabel.cpp  MarqueeLabel.h  NetworkHelper.cpp  NetworkHelper.h  NetworkHelperWindow.cpp  NetworkHelperWindow.h  ReportHelper.cpp  ReportHelper.h  ReportWindow.cpp  ReportWindow.h  SerialWindow.cpp  SerialWindow.h  SerialWindow.ui  SerialWorker.cpp  SerialWorker.h  UsbRawHelper.cpp  UsbRawHelper.h  (+17 more)
Hello/translations/: Hello_en_US.qm  Hello_en_US.ts  Hello_zh_CN.qm  Hello_zh_CN.ts  README.md
